@@ -135,6 +135,7 @@
             <UL>
               <LI><A HREF="application.html#webui">Web User Interface</A></LI>
               <LI><A HREF="application.html#oai">OAI-PMH Data Provider</A></LI>
+              <li><a href="application.html#structbuilder">Community and Collection Structure Importer</a></li>
 	      <LI><A HREF="application.html#packager">Package Importer and Exporter</a></LI>
               <LI><A HREF="application.html#itemimporter">Item Importer and Exporter</A></LI>
               <LI><A HREF="application.html#transferitem">Transferring Items Between DSpace Instances</A></LI>
